# asistente-osvaldo

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_simple_example.py  setup.py
docs/: DEVELOPMENT.md
docs/api/: README.md  assistant.md  configuration.md  logging.md  messages.md  utils.md
docs/examples/: README.md  advanced_config.py  basic_usage.py  custom_logging.py  testing_components.py
openspec/changes/python-assistant-base/: design.md  proposal.md  tasks.md
openspec/changes/python-assistant-base/specs/config-management/: spec.md
openspec/changes/python-assistant-base/specs/core-assistant/: spec.md
openspec/changes/python-assistant-base/specs/logging-system/: spec.md
openspec/changes/python-assistant-base/specs/project-structure/: spec.md
openspec/changes/python-assistant-base/specs/testing-framework/: spec.md
src/assistant/: __init__.py
src/assistant/core/: __init__.py  assistant.py  config.py  config_loader.py  config_validator.py  environment_config.py  secret_manager.py
src/assistant/interfaces/: __init__.py  message.py  responses.py  validation.py
src/assistant/plugins/: __init__.py
src/assistant/utils/: __init__.py  exception_logger.py  logger_factory.py  logging.py  performance_logger.py  structured_logging.py
tests/: conftest.py  mock_assistant.py  test_config_fixtures.py  test_utilities.py
