[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-framework"
version = "0.1.0"
description = "A modular Python framework for building AI assistants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Assistant Framework Team", email = "team@assistant-framework.dev"}
]
maintainers = [
    {name = "Assistant Framework Team", email = "team@assistant-framework.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "assistant", "framework", "chatbot", "llm"]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "structlog>=23.2.0,<24.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0,<2.0.0",
]
anthropic = [
    "anthropic>=0.7.0,<1.0.0",
]
http = [
    "httpx>=0.25.0,<1.0.0",
]
asyncio = [
    "aiofiles>=23.2.0,<24.0.0",
    "asyncio-mqtt>=0.11.0,<1.0.0",
]
all = [
    "assistant-framework[openai,anthropic,http,asyncio]",
]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-xdist>=3.3.0,<4.0.0",
    "black>=23.10.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "ipython>=8.17.0,<9.0.0",
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.4.0,<10.0.0",
    "mkdocstrings[python]>=0.23.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/assistant-framework/assistant-framework"
Documentation = "https://assistant-framework.readthedocs.io"
Repository = "https://github.com/assistant-framework/assistant-framework.git"
"Bug Tracker" = "https://github.com/assistant-framework/assistant-framework/issues"
Changelog = "https://github.com/assistant-framework/assistant-framework/blob/main/CHANGELOG.md"

[project.scripts]
assistant = "assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
assistant = ["py.typed", "*.yaml", "*.yml"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PT", # pytest
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "PT001",  # use @pytest.fixture instead of @pytest.fixture()
]
extend-exclude = ["tests/legacy/*", "docs/*"]

[tool.ruff.per-file-ignores]
"tests/*" = ["B", "PT"]
"__init__.py" = ["F401"]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "structlog.*",
    "cryptography.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/assistant",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "external: marks tests that call external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:distutils",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/assistant"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# MkDocs configuration
[tool.mkdocs]
site_name = "Assistant Framework"
site_description = "Modular Python framework for AI assistants"
repo_url = "https://github.com/assistant-framework/assistant-framework"
edit_uri = "edit/main/docs/"
theme = "material"

plugins = [
    "search",
    "mkdocstrings",
]

nav = [
    "Home": "index.md",
    "Getting Started": [
        "Installation": "installation.md",
        "Quick Start": "quickstart.md",
        "Configuration": "configuration.md",
    ],
    "User Guide": [
        "Core Concepts": "concepts.md",
        "Creating Assistants": "creating-assistants.md",
        "Configuration": "configuration.md",
        "Logging": "logging.md",
    ],
    "API Reference": [
        "assistant": "api/assistant.md",
        "core": "api/core.md",
        "utils": "api/utils.md",
        "interfaces": "api/interfaces.md",
    ],
    "Developer Guide": [
        "Contributing": "contributing.md",
        "Architecture": "architecture.md",
        "Testing": "testing.md",
    ],
]